# KR4

./: README.md  main.py  pyproject.toml  random_tests.py
data/: obj_vacancies.json  vacancies.json
src/: data.json  hhparser.py  utils.py  vacancies.json  vacancy.py  vacmanager.py
