[tool.poetry]
name = "kr4"
version = "0.1.0"
description = "Курсовая работа №4 Бородина Дмитрия"
authors = ["Dmitriy Borodin <dmitriyborodinpm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
